[UPDATE] git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ application/cache/*
 application/logs/*
 !application/logs/index.html
 
+#not commit 2 file
+application/config/*
+!application/config/config.php
+!application/config/database.php
+
+
 !application/*/.htaccess
 
 composer.lock
